[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/fonts/irish-grover/IrishGrover.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/scripts/Get Out.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/game-over/Assets/Rectangle 5.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="Get Out2" type="Button"]
margin_left = 736.949
margin_top = 538.279
margin_right = 1083.95
margin_bottom = 621.279
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 172.417, 39.3848 )
scale = Vector2( 0.883059, 0.9948 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 123.0
margin_top = 16.0
margin_right = 222.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Sair"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Get_Out_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Get_Out_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Get_Out_pressed"]
